--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,11 +5,11 @@ author: Diefferson Santos <diefferson.sts@gmail.com>
 homepage: https://github.com/diefferson/http_certificate_pinning
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.12.0"
 
 dependencies:
-  dio: ^4.0.0
+  dio: ^5.1.0
   flutter:
     sdk: flutter
   http: ^0.13.1
